--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+numpy==1.19.2
+tqdm==4.50.2
+scikit-learn==0.23.2
+regex==2020.10.15 
 fastapi==0.63.0
 fr-dep-news-trf @ https://github.com/explosion/spacy-models/releases/download/fr_dep_news_trf-3.0.0/fr_dep_news_trf-3.0.0-py3-none-any.whl
 sentence-transformers==1.1.0
