--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy==1.19.2
 tqdm==4.50.2
 pandas==1.1.3
+pickleshare==0.7.5                
 scikit-learn==0.23.2
 regex==2020.10.15 
 fastapi==0.63.0
